# LocalMind

./: .gitignore  Cargo.toml  LICENSE  README.md  SECURITY.md  package.json  pnpm-lock.yaml
.github/workflows/: ci-frontend.yml  ci-python.yml  ci-rust.yml  release.yml
apps/desktop/: eslint.config.js  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  vitest.config.ts
apps/desktop/src/: App.css  App.tsx  index.css  test-setup.ts  types.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/__tests__/: App.smoke.test.tsx
apps/desktop/src/components/: BuddyPage.tsx  Composer.tsx  ConnectionsPage.tsx  ConversationList.tsx  FirstRunSetup.tsx  KnowledgePage.tsx  MemoryPage.tsx  MessageList.tsx  PlaceholderPage.tsx  ProjectsPage.tsx  SettingsPage.tsx  TasksPage.tsx  TodayPage.tsx  UpdateBanner.tsx
apps/desktop/src/hooks/: useChat.ts  useConversations.ts  useKnowledge.ts  useMemory.ts  useOllama.ts  useProjects.ts
crates/localmind-core/: Cargo.toml
crates/localmind-core/src/: lib.rs  ollama.rs  sidecar.rs
crates/localmind-db/: Cargo.toml
crates/localmind-db/src/: lib.rs  migrations.rs
crates/localmind-db/src/migrations/: 001_initial_schema.sql
crates/localmind-permissions/: Cargo.toml
services/ai/: main.py  requirements.txt
services/ai/app/: main.py  sync_engine.py
services/ai/app/connectors/: __init__.py  base.py  gmail.py  imessage.py  people_extractor.py  registry.py  whatsapp_web.py
services/ai/app/db/: conversations.py  knowledge.py  memories.py  messages.py  people.py  (+2 more)
(+12 files in other folders)
