[package]
name = "localmind-core"
version = "0.1.0"
edition = "2021"
description = "Window management, sidecar lifecycle, secrets, permissions, and audit log for LocalMind"

[dependencies]
dirs = "5"
rand = "0.8"
tokio = { version = "1", features = ["time", "process"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
